--- a/wp-content/themes/ameraview-infinity-pro/css/style-front.css
+++ b/wp-content/themes/ameraview-infinity-pro/css/style-front.css
@@ -18,7 +18,8 @@ Loaded on the front page */
 .front-page .white .site-header,
 .header-image.front-page .site-header {
 	background-color: #fff;
-	border-bottom: 1px solid #eee;
+	/* border-bottom: 1px solid #eee; */
+	border-bottom: 1px solid white;
 }
 
 .front-page .offscreen-content-icon button,
@@ -52,11 +53,11 @@ Loaded on the front page */
 .header-image.front-page .genesis-nav-menu a,
 .header-image.front-page .genesis-nav-menu .sub-menu a,
 .header-image.front-page .offscreen-content-icon button {
-	color: #000;
+	color: white;
 }
 .front-page .genesis-nav-menu .sub-menu a,
 .header-image.front-page .genesis-nav-menu .sub-menu a {
-	/* color: #fff; */
+	color: #ff0000;
 }
 .front-page .genesis-nav-menu a:hover,
 .front-page .genesis-nav-menu a:focus,
@@ -300,17 +301,6 @@ h2.front-page-subtitle {
 	#custom_html-5 > div > div > div > ul > li.product > a > h2 {
 	color: black; 
 	}
-	/* #menu-primary-1 > li.menu-item.current-menu-item > a,
-	#menu-primary-1 > li.menu-item > a { 
-	background-color: rgba(255, 255, 255, 0.1) !important;
-	border: none;
-	text-shadow: none !important;
-	color: white; 
-	font-weight: 500;
-	font-size: 16px;
-	} */
-	
-	
 	
 
 /* Front Page 2
@@ -320,6 +310,7 @@ h2.front-page-subtitle {
 	padding-bottom: 180px;
 	padding-top: 170px;
 	text-align: center;
+	background-color: white;
 }
 
 .front-page-2 .widget-full .wrap {
@@ -542,6 +533,7 @@ h2.front-page-subtitle {
 	padding-bottom: 180px;
 	padding-top: 170px;
 	text-align: center;
+	background-color: white;
 }
 
 .front-page-6 .widget-full .wrap {
@@ -868,7 +860,20 @@ h2.front-page-subtitle {
 /* Media Queries
 ---------------------------------------------------------------------------------------------------- */
 
+@media only screen and (max-width: 1024px) {
+	
+		#custom_html-9 > div > div > h1 {
+			font-size: 150px;
+			font-size: 15.0rem;
+		}
+}
+
 @media only screen and (max-width: 800px) {
+
+	#custom_html-9 > div > div > h1 {
+		font-size: 110px;
+		font-size: 11.0rem;
+	}
 
 	.front-page .site-inner {
 		margin-top: 0;
@@ -879,7 +884,7 @@ h2.front-page-subtitle {
 	.front-page .site-title a,
 	.front-page .site-title a:hover,
 	.front-page .site-title a:focus {
-		color: #000;
+		color: white;
 	}
 
 	.front-page-1,
@@ -944,10 +949,17 @@ h2.front-page-subtitle {
 }
 
 @media only screen and (max-width: 600px) {
+
+	#custom_html-9 > div > div > h1 {
+		font-size: 70px;
+		font-size: 7.0rem;
+	}
+
 	h1.front-page-logo {
 		font-size: 90px;
 		font-size: 9.0rem;
 	}
+
 	h2.front-page-subtitle {
 		font-size: 24px;
 	}
@@ -1001,6 +1013,12 @@ h2.front-page-subtitle {
 
 }
 @media only screen and (max-width: 480px) {
+	
+	#custom_html-9 > div > div > h1 {
+		font-size: 50px;
+		font-size: 5.0rem;
+	}
+
 	h1.front-page-logo {
 		font-size: 60px;
 		font-size: 6.0rem;
@@ -1023,6 +1041,11 @@ h2.front-page-subtitle {
 }
 @media only screen and (max-width: 320px) {
 	
+	#custom_html-9 > div > div > h1 {
+		font-size: 35px;
+		font-size: 3.5rem;
+	}
+
 	h1.front-page-logo {
 		font-size: 35px;
 		font-size: 3.5rem;
