--- a/wp-content/themes/ameraview-infinity-pro/style.css
+++ b/wp-content/themes/ameraview-infinity-pro/style.css
@@ -1,13 +1,10 @@
 /*
-	Theme Name: Ameraview Infinity Pro
-	Theme URI:  https://github.com/CapWebSolutions/ameraview/
-	Description: This is a customized derivative of the Infinity Pro theme created for the Genesis Framework.
+	Theme Name: Rubes Review
+	Description: This is the Ameraview custom verison of the Infinity Pro child theme created for the Genesis Framework.
 	Author: Cap Web Solutions
 	Author URI: http://capwebsolutions.com/
 
-	Version: 1.1.2
-
-	Tags: one-column, two-columns, left-sidebar, right-sidebar, accessibility-ready, custom-background, custom-colors, custom-header, custom-menu, e-commerce, featured-images, footer-widgets, full-width-template, sticky-post, theme-options, threaded-comments, translation-ready
+	Version: 2.0.0
 
 	Template: genesis
 	Template Version: 2.4
@@ -15,7 +12,7 @@
 	License: GPL-2.0+
 	License URI: http://www.gnu.org/licenses/gpl-2.0.html
 
-	Text Domain: infinity-pro
+	Text Domain: ameraview
 */
 
 
@@ -47,6 +44,7 @@
 	- Plugins
 		- Genesis eNews Extended
 		- Jetpack
+		- WooCommerce
 	- Skip Links
 	- Site Header
 		- Title Area
@@ -157,7 +155,7 @@ body > div {
 }
 
 body {
-	background-color: #fff;
+	background-color: #07213E;
 	color: #000;
 	font-family: 'Cormorant Garamond', serif;
 	font-size: 22px;
@@ -192,7 +190,7 @@ textarea:focus,
 }
 
 a {
-	color: #d43c67;
+	color: #ff0000;
 	text-decoration: none;
 }
 
@@ -471,7 +469,7 @@ input[type="reset"],
 input[type="select"],
 input[type="submit"],
 .button {
-	background-color: #d43c67;
+	background-color: #ff0000;
 	border: 0;
 	border-radius: 0;
 	color: #fff;
@@ -552,6 +550,24 @@ input[type="search"]::-webkit-search-cancel-button,
 input[type="search"]::-webkit-search-results-button {
 	display: none;
 }
+
+/* Dark background 
+--------------------------------------------- */
+
+
+/* body > div.site-container {
+	background-color: #07213E;  
+} */
+/* body > div.site-container > div.site-inner,
+body > div.site-container.white > footer,
+#genesis-footer-widgets {
+	background-color: white;
+} */
+
+/* body > div.site-container > header,
+body > div.site-container.white > div.site-inner > div {
+	border-bottom: 66px solid #07213E;
+} */
 
 /* Tables
 --------------------------------------------- */
@@ -634,12 +650,14 @@ th:first-child {
 	margin: 73px auto 0;
 	max-width: 1280px;
 	word-wrap: break-word;
+	background-color: white;
 }
 
 .landing-page .site-inner,
 .lead-capture-page .site-inner {
 	margin-top: 0;
-	max-width: 840px;
+	max-width: 960px;	
+	/* max-width: 840px; */
 }
 
 /* Column Widths and Positions
@@ -667,7 +685,7 @@ th:first-child {
 	float: none;
 	margin-left: auto;
 	margin-right: auto;
-	max-width: 840px;
+	/* max-width: 840px; */
 	width: 100%;
 }
 
@@ -874,7 +892,7 @@ th:first-child {
 
 .entry-title a:hover,
 .entry-title a:focus {
-	color: #d43c67;
+	color: #ff0000;
 }
 
 .widget-title {
@@ -1054,7 +1072,7 @@ img.alignright,
 .footer-widgets .featured-content .entry-meta a:focus,
 .sidebar .featured-content .entry-meta a:hover,
 .sidebar .featured-content .entry-meta a:focus {
-	color: #d43c67;
+	color: #ff0000;
 }
 
 .footer-widgets .featured-content .entry-image,
@@ -1154,7 +1172,7 @@ img.alignright,
 }
 
 .enews-widget input:hover[type="submit"] {
-	background-color: #d43c67;
+	background-color: #ff0000;
 }
 
 /* Jetpack
@@ -1164,6 +1182,33 @@ img.alignright,
 	display: none;
 }
 
+
+/* WooCommerce
+--------------------------------------------- */
+
+/* Align the Add To Cart Buttons on latest-additions page -> Body class amv-latest-additions */
+body.amv-latest-additions .content-sidebar-wrap #genesis-content a.button.product_type_simple.add_to_cart_button.ajax_add_to_cart { 
+    bottom: 0; 
+    position: absolute; 
+    display: block; 
+    bottom: 0px;
+}
+
+body.amv-latest-additions .content-sidebar-wrap #genesis-content ul.products li.product, 
+body.amv-latest-additions .content-sidebar-wrap #genesis-content ul.products li.product { 
+    min-height: 375px !important; 
+    margin-bottom:10px; 
+
+}
+body.amv-latest-additions ul li a.button.product_type_variable,
+body.amv-latest-additions a.button.product_type_simple,
+body.amv-latest-additions a.button.product_type_simple.ajax_add_to_cart,
+body.amv-latest-additions a.button.product_type_variable.add_to_cart_button,
+body.amv-latest-additions a.button.product_type_simple.add_to_cart_button {
+    bottom: 10px; 
+    position: absolute;
+
+} 
 
 /* Skip Links
 ---------------------------------------------------------------------------------------------------- */
@@ -1194,7 +1239,8 @@ img.alignright,
 
 .site-header {
 	background-color: #fff;
-	border-bottom: 1px solid #eee;
+	border-bottom: 66px solid #07213e;
+	/* border-bottom: 1px solid #eee; */
 	padding-left: 30px;
 	padding-right: 30px;
 	position: fixed;
@@ -1503,7 +1549,7 @@ p.entry-meta {
 
 .archive-pagination a:hover,
 .archive-pagination a:focus {
-	color: #d43c67;
+	color: #ff0000;
 }
 
 .archive-pagination li {
@@ -1711,7 +1757,7 @@ p.entry-meta {
 
 .offscreen-content button:hover,
 .offscreen-content-icon button:hover {
-	color: #d43c67;
+	color: #ff0000;
 }
 
 
@@ -1719,7 +1765,7 @@ p.entry-meta {
 ---------------------------------------------------------------------------------------------------- */
 
 .footer-widgets {
-	border-top: 1px solid #eee;
+	border-top: 1px solid #07213E;
 	font-size: 20px;
 	font-size: 2rem;
 	clear: both;
@@ -1764,17 +1810,18 @@ p.entry-meta {
 }
 
 .footer-widgets .button:hover {
-	background-color: #d43c67;
+	background-color: #ff0000;
 }
 
 /* Site Footer
 ---------------------------------------------------------------------------------------------------- */
 
 .site-footer {
-	border-top: 1px solid #eee;
+	border-top: 1px solid #07213E;
 	line-height: 1;
-	padding: 60px 0;
+	padding: 30px 0;
 	text-align: center;
+	color: #eee;
 }
 
 .site-footer .wrap {
@@ -1791,14 +1838,17 @@ p.entry-meta {
 }
 
 .site-footer a {
-	color: #000;
+	color: #eee;
 }
 
 .site-footer a:hover,
 .site-footer a:focus {
-	color: #d43c67;
+	color: #ff0000;
 }
 
+body > div.site-container.white > footer > div {
+	font-size: small;
+}
 
 /* Fadein Effect
 ---------------------------------------------------------------------------------------------------- */
@@ -1913,20 +1963,25 @@ p.entry-meta {
 		border-width: 0;
 		/* background-color: #fff; */
 		background-color: transparent;
-		color: #333;
+		color: white;
 		display: block;
 		margin: 0 auto;
 		overflow: hidden;
 		text-align: center;
 		visibility: visible;
 	}
+	body.page-template-default .menu-toggle,
+	body.page-template-default .sub-menu-toggle {
+		color: #000;
+	}
+
 
 	.menu-toggle:focus,
 	.menu-toggle:hover,
 	.sub-menu-toggle:focus,
 	.sub-menu-toggle:hover {
 		background: transparent;
-		color: #d43c67;
+		color: #ff0000;
 		border-width: 0;
 	}
 
@@ -1990,11 +2045,11 @@ p.entry-meta {
 
 	.genesis-responsive-menu .genesis-nav-menu a:focus,
 	.genesis-responsive-menu .genesis-nav-menu a:hover {
-		color: #d43c67;
+		color: #ff0000;
 	}
 
 	.genesis-responsive-menu .genesis-nav-menu a:focus {
-		color: #d43c67;
+		color: #ff0000;
 		outline: thin solid #ccc;
 		outline-offset: -1px;
 	}
@@ -2103,6 +2158,12 @@ p.entry-meta {
 }
 
 @media only screen and (max-width: 600px) {
+	
+	footer > div > div.alignleft,
+	footer > div > div.alignright {
+		float: none;
+		text-align: center;
+	}
 
 	.after-entry .enews-widget,
 	.landing-page .enews-widget,
